src/CBindings/libfdtLite.rs

unsafe extern "C" {
    #[doc = " fdt_appendprop_addrrange - append a address range property\n @fdt: pointer to the device tree blob\n @parent: offset of the parent node\n @nodeoffset: offset of the node to add a property at\n @name: name of property\n @addr: start address of a given range\n @size: size of a given range\n\n fdt_appendprop_addrrange() appends an address range value (start\n address and size) to the value of the named property in the given\n node, or creates a new property with that value if it does not\n already exist.\n\n Cell sizes are determined by parent's #address-cells and #size-cells.\n\n This function may insert data into the blob, and will therefore\n change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADNCELLS, if the node has a badly formatted or invalid\n\t\t#address-cells property\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADVALUE, addr or size doesn't fit to respective cells size\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob to\n\t\tcontain a new property\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_appendprop_addrrange(
        fdt: *mut core::ffi::c_void,
        parent: core::ffi::c_int,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        addr: u64_,
        size: u64_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_delprop - delete a property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to nop\n @name: name of the property to nop\n\n fdt_delprop() will delete the given property.\n\n This function will delete data from the blob, and will therefore\n change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOTFOUND, node does not have the named property\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_delprop(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_add_subnode_namelen(
        fdt: *mut core::ffi::c_void,
        parentoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_add_subnode - creates a new node\n @fdt: pointer to the device tree blob\n @parentoffset: structure block offset of a node\n @name: name of the subnode to locate\n\n fdt_add_subnode() creates a new node as a subnode of the node at\n structure block offset parentoffset, with the given name (which\n should include the unit address, if any).\n\n This function will insert data into the blob, and will therefore\n change the offsets of some existing nodes.\n\n returns:\n\tstructure block offset of the created subnode (>=0), on success\n\t-FDT_ERR_NOTFOUND, if the requested subnode does not exist\n\t-FDT_ERR_BADOFFSET, if parentoffset did not point to an FDT_BEGIN_NODE\n\t\ttag\n\t-FDT_ERR_EXISTS, if the node at parentoffset already has a subnode of\n\t\tthe given name\n\t-FDT_ERR_NOSPACE, if there is insufficient free space in the\n\t\tblob to contain the new node\n\t-FDT_ERR_NOSPACE\n\t-FDT_ERR_BADLAYOUT\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings."]
    pub fn fdt_add_subnode(
        fdt: *mut core::ffi::c_void,
        parentoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_del_node - delete a node (subtree)\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node to nop\n\n fdt_del_node() will remove the given node, including all its\n subnodes if any, from the blob.\n\n This function will delete data from the blob, and will therefore\n change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_del_node(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_overlay_apply - Applies a DT overlay on a base DT\n @fdt: pointer to the base device tree blob\n @fdto: pointer to the device tree overlay blob\n\n fdt_overlay_apply() will apply the given device tree overlay on the\n given base device tree.\n\n Expect the base device tree to be modified, even if the function\n returns an error.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there's not enough space in the base device tree\n\t-FDT_ERR_NOTFOUND, the overlay points to some nonexistent nodes or\n\t\tproperties in the base DT\n\t-FDT_ERR_BADPHANDLE,\n\t-FDT_ERR_BADOVERLAY,\n\t-FDT_ERR_NOPHANDLES,\n\t-FDT_ERR_INTERNAL,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADOFFSET,\n\t-FDT_ERR_BADPATH,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_overlay_apply(
        fdt: *mut core::ffi::c_void,
        fdto: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_overlay_target_offset - retrieves the offset of a fragment's target\n @fdt: Base device tree blob\n @fdto: Device tree overlay blob\n @fragment_offset: node offset of the fragment in the overlay\n @pathp: pointer which receives the path of the target (or NULL)\n\n fdt_overlay_target_offset() retrieves the target offset in the base\n device tree of a fragment, no matter how the actual targeting is\n done (through a phandle or a path)\n\n returns:\n      the targeted node offset in the base device tree\n      Negative error code on error"]
    pub fn fdt_overlay_target_offset(
        fdt: *const core::ffi::c_void,
        fdto: *const core::ffi::c_void,
        fragment_offset: core::ffi::c_int,
        pathp: *mut *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_strerror(errval: core::ffi::c_int) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn fdt_ro_probe_(fdt: *const core::ffi::c_void) -> i32_;
}
unsafe extern "C" {
    pub fn fdt_check_node_offset_(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_check_prop_offset_(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_find_string_len_(
        strtab: *const core::ffi::c_char,
        tabsize: core::ffi::c_int,
        s: *const core::ffi::c_char,
        s_len: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn fdt_node_end_offset_(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
pub const ASSUME_PERFECT: _bindgen_ty_1 = 255;
pub const ASSUME_VALID_DTB: _bindgen_ty_1 = 1;
pub const ASSUME_VALID_INPUT: _bindgen_ty_1 = 2;
pub const ASSUME_LATEST: _bindgen_ty_1 = 4;
pub const ASSUME_NO_ROLLBACK: _bindgen_ty_1 = 8;
pub const ASSUME_LIBFDT_ORDER: _bindgen_ty_1 = 16;
pub const ASSUME_LIBFDT_FLAWLESS: _bindgen_ty_1 = 32;
pub type _bindgen_ty_1 = core::ffi::c_uint;
